--- a/generate_summary.ipynb
+++ b/generate_summary.ipynb
@@ -121,8 +121,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pdf_path = '/Users/omkarg/Downloads/flask_ui_working/Flask_App2/static/Data_Resumes_PDF/Manoj Kumar Ch (1).pdf'\n",
-    "jd_path = '/Users/omkarg/Downloads/flask_ui_working/Flask_App2/static/pdf/SRE Cloud Native.pdf'\n",
+    "pdf_path = './static/Data_Resumes_PDF/Manoj Kumar Ch (1).pdf'\n",
+    "jd_path = './static/pdf/SRE Cloud Native.pdf'\n",
     "\n",
     "top_cand_text = get_text(pdf_path)\n",
     "jd_text = get_text(jd_path)\n",
@@ -339,7 +339,7 @@
     }
    ],
    "source": [
-    "zz = main('/Users/omkarg/Downloads/flask_ui_working/Flask_App2/static/jd_skills/Top_Skills_Of_JD_sre01.xlsx','sre01')"
+    "zz = main('./static/jd_skills/Top_Skills_Of_JD_sre01.xlsx','sre01')"
    ]
   },
   {
@@ -365,7 +365,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = '/Users/omkarg/Downloads/flask_ui_working/Flask_App2/static/jd_skills/Top_Skills_Of_JD_sre01.xlsx'\n",
+    "path = './static/jd_skills/Top_Skills_Of_JD_sre01.xlsx'\n",
     "requisition_id = 'sre01'"
    ]
   },
@@ -506,8 +506,8 @@
     "\n",
     "\n",
     "\n",
-    "    top_resume_pdf_path = f'/Users/omkarg/Downloads/flask_ui_working/Flask_App2/static/Data_Resumes_PDF/{resume_title}'\n",
-    "    jd_path_new = f'/Users/omkarg/Downloads/flask_ui_working/Flask_App2/static/pdf/{jd_title_name}'\n",
+    "    top_resume_pdf_path = f'./static/Data_Resumes_PDF/{resume_title}'\n",
+    "    jd_path_new = f'./static/pdf/{jd_title_name}'\n",
     "\n",
     "    top_cand_text = get_text(top_resume_pdf_path)\n",
     "    jd_text = get_text(jd_path_new)\n",
@@ -1293,8 +1293,8 @@
     "\n",
     "\n",
     "\n",
-    "    top_resume_pdf_path = f'/Users/omkarg/Downloads/flask_ui_working/Flask_App2/static/Data_Resumes_PDF/{resume_title}'\n",
-    "    jd_path_new = f'/Users/omkarg/Downloads/flask_ui_working/Flask_App2/static/pdf/{jd_title_name}'\n",
+    "    top_resume_pdf_path = f'./static/Data_Resumes_PDF/{resume_title}'\n",
+    "    jd_path_new = f'./static/pdf/{jd_title_name}'\n",
     "\n",
     "    top_cand_text = get_text(top_resume_pdf_path)\n",
     "    jd_text = get_text(jd_path_new)\n",
@@ -1400,7 +1400,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ourpath = '/Users/omkarg/Downloads/flask_ui_working/Flask_App2/static/jd_skills/Top_Skills_Of_JD_datascience.xlsx'"
+    "ourpath = './static/jd_skills/Top_Skills_Of_JD_datascience.xlsx'"
    ]
   },
   {
@@ -1416,13 +1416,13 @@
     "    print(resume_title)\n",
     "    jd_title_name = 'SRE Cloud Native.pdf'\n",
     "\n",
-    "    top_resume_pdf_path = f'/Users/omkarg/Downloads/flask_ui_working/Flask_App2/static/Data_Resumes_PDF/{resume_title}'\n",
+    "    top_resume_pdf_path = f'./static/Data_Resumes_PDF/{resume_title}'\n",
     "    #jd_path_new = path\n",
     "    #print(path)\n",
     "    current_jd = pd.read_excel(ourpath)\n",
     "    #print(current_jd)\n",
     "    jd_title_name = current_jd['JD_PDF_Title'][0]\n",
-    "    jd_path_new = f'/Users/omkarg/Downloads/flask_ui_working/Flask_App2/static/pdf/{jd_title_name}'\n",
+    "    jd_path_new = f'./static/pdf/{jd_title_name}'\n",
     "\n",
     "    top_cand_text = get_text(top_resume_pdf_path)\n",
     "    jd_text = get_text(jd_path_new)\n",
@@ -2122,8 +2122,8 @@
    "source": [
     "\n",
     "\n",
-    "pdf_path = f'/Users/omkarg/Downloads/flask_ui_working/Flask_App2/static/Data_Resumes_PDF/{na}'\n",
-    "jd_path = f'/Users/omkarg/Downloads/flask_ui_working/Flask_App2/static/pdf/{jd}'\n",
+    "pdf_path = f'./static/Data_Resumes_PDF/{na}'\n",
+    "jd_path = f'./static/pdf/{jd}'\n",
     "\n",
     "top_cand_text = get_text(pdf_path)\n",
     "jd_text = get_text(jd_path)\n",
