--- a/matching_tool.ipynb
+++ b/matching_tool.ipynb
@@ -457,7 +457,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_excel('/Users/omkarg/Downloads/flask_ui_working/Flask_App2/static/Skill_matrix_as_per_JD/Skill_matrix_as_per_JD_sre_old_1.xlsx')"
+    "df = pd.read_excel('./static/Skill_matrix_as_per_JD/Skill_matrix_as_per_JD_sre_old_1.xlsx')"
    ]
   },
   {
@@ -478,7 +478,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/omkarg/Downloads/flask_ui_working/Flask_App2/env_resume_parser/lib/python3.9/site-packages/fuzzywuzzy/fuzz.py:11: UserWarning: Using slow pure-python SequenceMatcher. Install python-Levenshtein to remove this warning\n",
+      "./env_resume_parser/lib/python3.9/site-packages/fuzzywuzzy/fuzz.py:11: UserWarning: Using slow pure-python SequenceMatcher. Install python-Levenshtein to remove this warning\n",
       "  warnings.warn('Using slow pure-python SequenceMatcher. Install python-Levenshtein to remove this warning')\n"
      ]
     }
